# iloader

./: package.json
src/: i18next.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/locales/: ja.json
